--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <header>
         <div class="header-wrapper">
             <div class="header-logo-wrapper">
-                <img src="images/logo.svg" alt="" class="logo-img">
-                <h1 class="logo-text">SSET</h1>
+                <div class="logo-img-wrapper"><img src="images/logo.svg" alt="" class="logo-img"></div>
+                <h1 class="logo-text">logo</h1>
             </div>
 
             <div class="header-nav-container">
                 <ul class="haeder-nav-wrapper">
+                  
+                    <li class="header-nav-elements menu-icon"><a class="active" href=""><i class="fa-solid fa-bars"></i></a></li>
                     <li class="header-nav-elements"><a class="active" href="">Home</a></li>
                     <li class="header-nav-elements"><a href="">About Us</a></li>
                     <!-- <li class="header-nav-elements"><a href="">Departments</a></li> -->
@@ -34,7 +36,7 @@
                     <li class="header-nav-elements"><a href="">Campus</a></li>
                     <li class="header-nav-elements"><a href="">Research</a></li>
                     <li class="header-nav-elements"><a href="">News</a></li>
-                    <li class="header-nav-elements"><a href="">Campus Life</a></li>
+                    <!-- <li class="header-nav-elements"><a href="">Campus Life</a></li> -->
                     <li class="header-nav-elements"><a href="">Admission</a></li>
                     <li class="header-nav-elements"><a href="">Alumini</a></li>
                     <li class="header-nav-elements"><a href="">Login</a></li>
@@ -420,7 +422,7 @@
                         <li><a href="">Seminar</a></li>
                         <li><a href="">Sports</a></li>
                         <li><a href="">Recreation</a></li>
-                        <li><a href="">Health care</a></li>
+                        <li class="health-care-li"><a href="">Health care</a></li>
                     </ul>
                 </div>
                 <div class="home-events-content-right">
@@ -499,6 +501,16 @@
                         <img src="images/logoplace.png" alt="" class="home-societies-img">
                     </div>
                 </div>
+                <div class="home-societies-box">
+                    <div class="home-societies-img-box">
+                        <img src="images/logoplace.png" alt="" class="home-societies-img">
+                    </div>
+                </div>
+                <div class="home-societies-box">
+                    <div class="home-societies-img-box">
+                        <img src="images/logoplace.png" alt="" class="home-societies-img">
+                    </div>
+                </div>
                 
             </div>
         </section>
@@ -510,7 +522,7 @@
             <div class="home-contact-directions">
                 <div class="home-contact-directions-title">Directions</div>     
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.901559399651!2d76.39809205034408!3d10.269515192630765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b08011a49506827%3A0x7f47e0e624b0bd22!2sSCMS%20School%20of%20Engineering%20%26%20Technology%20%2C%20Karukutty!5e0!3m2!1sen!2sin!4v1678173929967!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.901559399651!2d76.39809205034408!3d10.269515192630765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b08011a49506827%3A0x7f47e0e624b0bd22!2sSCMS%20School%20of%20Engineering%20%26%20Technology%20%2C%20Karukutty!5e0!3m2!1sen!2sin!4v1678173929967!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 <div class="home-contact-directions-para"><b>Lorem Ipsum </b>is simply dummy text of the printing and typesetting industry.</div>
             </div>
