hover animations added

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
                         </div>
                         <div class="right-description-right">
                             <div>Admission Hotline</div>
-                            <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80072</div>
-                            <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80074</div>
-                            <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80073</div>
+                            <div class="hot-line-numbers">
+                                <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80072</div>
+                                <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80074</div>
+                                <div><i  class=" phone-icon fa-solid fa-phone"></i>70347 80073</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,8 +94,8 @@
         <section class="home-sections home-deaprtments-section">
             <div class="home-deaprtments-nav-wrapper">
                 <div class="home-deaprtments-nav">
-                    <div class="home-deaprtments-nav-links headings">BACHELORS</div>
-                    <div class="home-deaprtments-nav-links headings">MASTERS</div>
+                    <div class="home-deaprtments-nav-links active ">BACHELORS</div>
+                    <div class="home-deaprtments-nav-links ">MASTERS</div>
                 </div>
             </div>
             <div class="home-deaprtments-box-container">
@@ -195,6 +197,8 @@
         <section class="home-sections home-faculty-section">
             <div class="home-faculty-left">
                 <div class="home-faculty-title titles">OUR SKILLED FACULTY HELPS STUDENTS IN MANY DISCIPLINES</div>
+                <!-- <div class="home-faculty-para para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, mollitia quaerat recusandae pariatur autem tenetur asperiores! Saepe officia qui tenetur placeat tempore aspernatur sequi quam eligendi quaerat? Facilis, doloribus eaque.</div> -->
+                <!-- <div class="read-more"><a href="">Read more</a></div> -->
             </div>
             <div class="home-faculty-right">
                 <div class="home-faculty-img-wrapper">
@@ -533,7 +537,7 @@
                     <input type="text" placeholder="name">
                     <input type="text" placeholder="email">
                     <textarea placeholder="enter your message" name="" id="" cols="30" rows="10"></textarea>
-                    <button type="submit">SUBMIT</button>
+                    <button class="contact-section-submit-btn" type="submit">SUBMIT</button>
                 </form>
             </div>
         </section>
